Init a Svelte app

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
         args: [--markdown-linebreak-ext=md]
 
       - id: check-json
+        exclude: ^tsconfig.json$
       - id: check-toml
       - id: check-yaml
 
