--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,46 +27,34 @@ repos:
       - id: destroyed-symlinks
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
+
+      - id: check-ast
+      - id: debug-statements
+  - repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v2.0.2
+    hooks:
+      - id: autopep8
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v3.0.0-alpha.6"
     hooks:
       - id: prettier
         additional_dependencies:
           - prettier@2
-          - prettier-plugin-svelte@2
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: "v8.37.0"
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.260
     hooks:
-      - id: eslint
-        types_or:
-          - svelte
-          - javascript
-          - ts
-        pass_filenames: false
-        additional_dependencies:
-          - "eslint"
-          - "eslint-config-prettier"
-          - "eslint-plugin-svelte3"
-          - "prettier@2"
-          - "@typescript-eslint/eslint-plugin"
-          - "@typescript-eslint/parser"
-  - repo: local
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+  - repo: https://github.com/jazzband/pip-tools
+    rev: 6.13.0
     hooks:
-      - id: svelte-check
-        name: Check code with svelte-check
-        entry: svelte-check
-        language: node
-        types_or:
-          - svelte
-          - html
-          - css
-          - ts
-        pass_filenames: false
-        additional_dependencies:
-          - "svelte"
-          - "svelte-check"
-          - "typescript"
-        args: ["--tsconfig", "./tsconfig.json"]
+      - id: pip-compile
+        args:
+          - "--allow-unsafe"
+          - "--generate-hashes"
+          - "--resolver=backtracking"
+          - "pyproject.toml"
+        files: ^pyproject.toml|requirements.txt$
   - repo: https://github.com/fsfe/reuse-tool
     rev: v1.1.2
     hooks:
