--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,5 @@
 	"useTabs": true,
 	"singleQuote": false,
 	"trailingComma": "all",
-	"printWidth": 80,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"printWidth": 80
 }
