--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 # © 2023 Nikita Karamov <n.karamov@tu-braunschweig.de>
 #
-# SPDX-License-Identifier: EUPL-1.2 OR AGPL-3.0-only
+# SPDX-License-Identifier: BSD-2-Clause
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
