--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,6 +55,14 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
+  - repo: https://github.com/thibaudcolas/curlylint
+    rev: v0.13.1
+    hooks:
+      - id: curlylint
+        files: '^meteoecran/templates'
+        types_or:
+          - jinja
+          - html
   - repo: https://github.com/fsfe/reuse-tool
     rev: v2.1.0
     hooks:
