--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,8 @@ repos:
     rev: "v4.0.0-alpha.8"
     hooks:
       - id: prettier
+        additional_dependencies:
+          - prettier@3
         types_or:
           - html
           - css
