--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ dependencies = [
     "pip-tools>=6",
 ]
 [tool.hatch.envs.reqs.scripts]
-compile = "pip-compile --header --annotate --output-file=requirements.txt --allow-unsafe --generate-hashes --resolver=backtracking {args:pyproject.toml}"
+compile = "pip-compile --header --annotate --output-file=requirements.txt --allow-unsafe --generate-hashes {args:pyproject.toml}"
 
 [tool.autopep8]
 ignore = ["W503"]
