--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ authors = [
 ]
 dependencies = [
     "httpx>=0.24",
-    "starlette[full]",
+    "starlette[full]>=0.40.0",
     "uvicorn[standard]",
-    "gunicorn",
+    "gunicorn>=22.0.0",
 ]
 
 [project.urls]
