--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
-# © 2023 Nikita Karamov <n.karamov@tu-braunschweig.de>
+# © 2023, 2025 Nikita Karamov <me@kytta.dev>
 #
 # SPDX-License-Identifier: BSD-2-Clause
 
+# Python-generated files
 __pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
 
-/dist
+# Virtual environments
+.venv
 
+# Secrets
 .env
 .env.*
 !.env.example
