--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "MeteoEcran"
 version = "0.1.0"
 description = "Current weather and forecast for digital signage"
 readme = "README.md"
-requires-python = ">=3.9,<3.10"
+requires-python = "==3.11.*"
 license = "EUPL-1.2 OR AGPL-3.0-only"
 authors = [
     { name = "Nikita Karamov", email = "me@kytta.dev" },
@@ -50,7 +50,7 @@ disallow_incomplete_defs = false
 disallow_untyped_defs = false
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py311"
 line-length = 79
 select = [
     "F",
