Simplify REUSE.toml

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,9 +1,10 @@
-# © 2024 Nikita Karamov
-#
-# SPDX-License-Identifier: CC0-1.0
-
 version = 1
-SPDX-PackageName = "MeteoÉcran"
-SPDX-PackageSupplier = "Nikita Karamov <me@kytta.dev>"
-SPDX-PackageDownloadLocation = "https://github.com/kytta/MeteoEcran"
-annotations = []
+
+# Computer-generated files.
+[[annotations]]
+path = [
+    "requirements.txt",
+    "uv.lock",
+]
+SPDX-FileCopyrightText = "NONE"
+SPDX-License-Identifier = "CC0-1.0"
