--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,19 +37,9 @@ typing = [
 ignore = ["W503"]
 
 [tool.mypy]
-check_untyped_defs = true
-disallow_any_generics = true
-disallow_incomplete_defs = true
-disallow_untyped_defs = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-
-[[tool.mypy.overrides]]
-module = ["tests.*"]
-ignore_missing_imports = true
-check_untyped_defs = false
-disallow_incomplete_defs = false
-disallow_untyped_defs = false
+strict = true
+pretty = true
+show_error_codes = true
 
 [tool.ruff]
 target-version = "py311"
